# aichor-demo

./: .gitignore  LICENSE  README.md  main.py  manifest.yaml
dockerfiles/: Dockerfile  ray.Dockerfile
hugging-face-accelerate/: Dockerfile  README.md  pyproject.toml  requirements.txt
hugging-face-accelerate/manifests/checkpointing/: manifest.yaml
hugging-face-accelerate/manifests/multi_worker_no_rdma/: manifest.2-wrkr-1-a100-mig3.40gb.yaml  manifest.2-wrkr-2-v100.yaml  manifest.4-wrkr-1-a100-mig3.40gb.yaml
hugging-face-accelerate/manifests/rdma/1_worker/: manifest.1wrkr-1-h100-80gb.yaml  manifest.1wrkr-2-h100-80gb.yaml  manifest.1wrkr-4-h100-80gb.yaml  manifest.1wrkr-8-h100-80gb.yaml
hugging-face-accelerate/manifests/rdma/2_workers/: manifest.2wrkr-1-h100-80gb.yaml  manifest.2wrkr-2-h100-80gb.yaml  manifest.2wrkr-4-h100-80gb.yaml  manifest.2wrkr-8-h100-80gb.yaml
hugging-face-accelerate/manifests/single_worker/: manifest.1-wrkr-1-a100-40gb.yaml  manifest.1-wrkr-1-a100-80gb.yaml  manifest.1-wrkr-1-a100-mig3.40gb.yaml  manifest.1-wrkr-1-quadro.yaml  manifest.1-wrkr-2-a100-40gb.yaml  manifest.1-wrkr-2-a100-80gb.yaml  manifest.1-wrkr-2-quadro.yaml  manifest.1-wrkr-2-v100.yaml  manifest.1-wrkr-4-a100-40gb.yaml  manifest.1-wrkr-4-a100-80gb.yaml  manifest.1-wrkr-4-quadro.yaml  manifest.1-wrkr-4-v100.yaml  manifest.1-wrkr-8-a100-40gb.yaml  manifest.1-wrkr-8-v100.yaml
hugging-face-accelerate/src/: constant.py  main.py  utils.py
hugging-face-accelerate/src/data/: checkpointing.py  dataset.py  model.py  save_final_model.py  tokenizer.py
jax-demo/: README.md  (+1 more)
(+79 files in other folders)
