[project]
name = "my-app"
version = "0.1.0"
description = "My training pipeline"
requires-python = ">=3.11"

dependencies = [
    "accelerate==1.10.1",
    "boto3==1.39.11",
    "botocore==1.39.11",
    "evaluate==0.4.5",
    "fsspec==2025.3.0",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "python-slugify==8.0.4",
    "s3fs==2025.3.0",
    "tensorboardX==2.6.4",
    "torch==2.8.0",
    "transformers==4.55.2",
]
